--- a/EncryptMessangerClient/RegistrationForm.xaml
+++ b/EncryptMessangerClient/RegistrationForm.xaml
@@ -4,13 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EncryptMessangerClient"
+        xmlns:vm="clr-namespace:EncryptMessangerClient.ViewModel"
         mc:Ignorable="d"
         Title="RegistrationForm" Height="300" Width="300">
+    <Window.DataContext>
+        <vm:RegistrationViewModel />
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1.2*"></RowDefinition>
             <RowDefinition Height="1.2*"></RowDefinition>
-            <RowDefinition Height="1.2*"></RowDefinition>
+            <RowDefinition Height="1.5*"></RowDefinition>
+            
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -18,23 +23,24 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Margin="5">
             <Label  Content="Логин" ></Label>
-            <TextBox   x:Name="login" Margin="0,5,0,0"></TextBox>
+            <TextBox   x:Name="login" Margin="0,5,0,0" Text="{Binding Login}"></TextBox>
         </StackPanel>
         <StackPanel Grid.Row="1" Margin="5">
             <Label  Content="Пароль" ></Label>
-            <PasswordBox Margin="0,5,0,0" x:Name="password"></PasswordBox>
+            <PasswordBox Margin="0,5,0,0" x:Name="password" PasswordChanged="password_PasswordChanged" ></PasswordBox>
         </StackPanel>
         <StackPanel Grid.Row="2" Margin="5">
             <Label  Content="Повторите пароль" ></Label>
-            <PasswordBox Margin="0,5,0,0" x:Name="passwordConfirm"></PasswordBox>
+            <PasswordBox Margin="0,5,0,0" x:Name="passwordConfirm" PasswordChanged="passwordConfirm_PasswordChanged"></PasswordBox>
+            <Label x:Name="error" Visibility="Visible" Foreground="Red" Content="{Binding Error}"></Label>
         </StackPanel>
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Margin="10" x:Name="registrationButton" Content="Зарегистрироваться"></Button>
-            <Button Grid.Column="1" Margin="10" x:Name="canselRegisrationButton" Content="Отмена"></Button>
+            <Button Grid.Column="0" Margin="10" x:Name="registrationButton" Content="Зарегистрироваться" Command="{Binding RegistrationCommand}"></Button>
+            <Button Grid.Column="1" Margin="10" x:Name="canselRegisrationButton" Content="Отмена" Command="{Binding CanselCommand}"></Button>
         </Grid>
         
     </Grid>
