--- a/EncryptMessangerClient/MainWindow.xaml
+++ b/EncryptMessangerClient/MainWindow.xaml
@@ -8,8 +8,35 @@
         xmlns:m="clr-namespace:EncryptMessangerClient.Model"
         mc:Ignorable="d"
         x:Uid="mainWindow"
-        Title="EncryptedMessangerClient" Height="404" Width="679" 
+        Title="EncryptedMessangerClient" Height="602" Width="865" 
         >
+
+
+    <Window.Resources>
+        <Style x:Key="DialogsStyle" TargetType="ListBoxItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <Border x:Name="border">
+                            <ContentPresenter></ContentPresenter>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter TargetName="border"  Property="Background" Value="LightSkyBlue"></Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <!--<Style.Resources>
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="LightSkyBlue" />
+                
+                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightSkyBlue" />
+            </Style.Resources>-->
+        </Style>
+    </Window.Resources>
+
+
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
@@ -24,24 +51,25 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="5*"></RowDefinition>
-                <RowDefinition  Height="1.2*"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition  Height="auto"></RowDefinition>
+                
             </Grid.RowDefinitions>
+            
             <ListBox Grid.Row="0" x:Name="messagesListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Messages}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="m:DialogMessage">
-                        <Border BorderBrush="Black" Margin="5" BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <Grid >
+                        <Border BorderBrush="Black" Margin="5" BorderThickness="1" CornerRadius="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid Background="AliceBlue" Margin="2">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition></RowDefinition>
-                                    <RowDefinition></RowDefinition>
-                                    <RowDefinition></RowDefinition>
-                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition Height="auto"></RowDefinition>
+                                    <RowDefinition Height="auto"></RowDefinition>
+                                    <RowDefinition Height="auto"></RowDefinition>
+                                    <RowDefinition Height="auto"></RowDefinition>
                                 </Grid.RowDefinitions>
-                                <Label Content="{Binding Author}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="0"></Label>
-                                <Label Content="{Binding Text}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"></Label>
-                                <Label Content="{Binding SendDate}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2"></Label>
+                                <Label Content="{Binding Author}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontWeight="Bold" Foreground="#1C1C1C" Grid.Row="0"></Label>
+                                <Label Content="{Binding Text}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="1"></Label>
+                                <Label Content="{Binding SendDate}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontStyle="Italic" Foreground="DarkGray" Grid.Row="2"></Label>
                                 <Label Content="{Binding AlteredErrorMessage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="3" Foreground="Red"></Label>
 
                             </Grid>
@@ -49,9 +77,18 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Button  x:Uid="sendMessageButton" Content="Отправить" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Command="{Binding MessageSendCommand}" Grid.Row="2"/>
-            <TextBox x:Name="textBox"  HorizontalAlignment="Stretch"  Margin="5,5,5,5" TextWrapping="Wrap"  VerticalAlignment="Stretch"  Text="{Binding MessageBox,UpdateSourceTrigger=PropertyChanged}" Grid.Row="1"/>
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+            <TextBox x:Name="textBox"  HorizontalAlignment="Stretch"  Margin="5,5,5,5" Padding="10" TextWrapping="Wrap"  VerticalAlignment="Stretch"  Text="{Binding MessageBox,UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Grid.Column="0"/>
+            <Button  x:Uid="sendMessageButton" Content="Отправить" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch" Padding="7" Command="{Binding MessageSendCommand}" Grid.Row="0" Grid.Column="1"/>
 
+            </Grid>
         </Grid>
         <Menu Grid.Row="0" Grid.ColumnSpan="2">
             <MenuItem Header="Шифрование">
@@ -60,10 +97,11 @@
                 <MenuItem Header="Обновить ключи шифрования" Command="{Binding UpdateDialogEncryptionKeysCommand}"></MenuItem>
             </MenuItem>
         </Menu>
-        <ListBox x:Name="dialogListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Dialogs}" SelectedIndex="{Binding DialogSelectedIndex}" Grid.Row="1">
+        <ListBox ItemContainerStyle="{StaticResource  DialogsStyle}"  Background="AliceBlue" x:Name="dialogListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Dialogs}" SelectedIndex="{Binding DialogSelectedIndex}" Grid.Row="1">
+            
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="m:Dialog">
-                    <Border BorderBrush="Black" Margin="5" BorderThickness="1" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
+                    <Border  BorderBrush="Black" Margin="5" BorderThickness="0" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -73,7 +111,7 @@
                             <Label Content="{Binding SessionErrorMessage}" Foreground="Red" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1"></Label>
                         </Grid>
                     </Border>
-                    
+
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
