--- a/EncryptMessangerClient/RegistrationForm.xaml
+++ b/EncryptMessangerClient/RegistrationForm.xaml
@@ -10,13 +10,13 @@
     <Window.DataContext>
         <vm:RegistrationViewModel />
     </Window.DataContext>
-    <Grid>
+    <Grid Background="AliceBlue" >
         <Grid.RowDefinitions>
-            <RowDefinition Height="1.2*"></RowDefinition>
-            <RowDefinition Height="1.2*"></RowDefinition>
-            <RowDefinition Height="1.5*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
             
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             
@@ -31,16 +31,16 @@
         </StackPanel>
         <StackPanel Grid.Row="2" Margin="5">
             <Label  Content="Повторите пароль" ></Label>
-            <PasswordBox Margin="0,5,0,0" x:Name="passwordConfirm" PasswordChanged="passwordConfirm_PasswordChanged"></PasswordBox>
-            <Label x:Name="error" Visibility="Visible" Foreground="Red" Content="{Binding Error}"></Label>
+            <PasswordBox Margin="0,5,0,1" x:Name="passwordConfirm" PasswordChanged="passwordConfirm_PasswordChanged"></PasswordBox>
+            <Label x:Name="error" Margin="0,0,0,0" Visibility="Visible" Foreground="Red" Content="{Binding Error}"></Label>
         </StackPanel>
         <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Margin="10" x:Name="registrationButton" Content="Зарегистрироваться" Command="{Binding RegistrationCommand}"></Button>
-            <Button Grid.Column="1" Margin="10" x:Name="canselRegisrationButton" Content="Отмена" Command="{Binding CanselCommand}"></Button>
+            <Button Grid.Column="0" Background="#CAE1FF" Padding="2" Margin="10,10,10,10" x:Name="registrationButton" VerticalAlignment="Bottom" Content="Зарегистрироваться" Command="{Binding RegistrationCommand}"></Button>
+            <Button Grid.Column="1" Background="#CAE1FF" Padding="2" Margin="10,10,10,10" x:Name="canselRegisrationButton"  VerticalAlignment="Bottom" Content="Отмена" Command="{Binding CanselCommand}"></Button>
         </Grid>
         
     </Grid>
