--- a/EncryptMessangerClient/MainWindow.xaml
+++ b/EncryptMessangerClient/MainWindow.xaml
@@ -9,7 +9,7 @@
         
         mc:Ignorable="d"
         x:Uid="mainWindow"
-        Title="EncryptedMessangerClient" Height="570" Width="850" 
+        Title="EncryptedMessangerClient" Height="570" Width="850" Loaded="Window_Loaded" 
         >
 
 
@@ -57,7 +57,7 @@
                 <RowDefinition  Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
             
-            <ListBox Grid.Row="0" x:Name="messagesListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Messages}">
+            <ListBox  Grid.Row="0" x:Name="messagesListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Messages}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="m:DialogMessage">
                         <Border BorderBrush="Black" Margin="5" BorderThickness="1" CornerRadius="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -111,6 +111,9 @@
             
         </Grid>
         <Menu Grid.Row="0" Grid.ColumnSpan="2">
+            <MenuItem Header="Диалог">
+                <MenuItem Header="Создать диалог" Command="{Binding OpenDialogCreationCommand}"></MenuItem>
+            </MenuItem>
             <MenuItem Header="Шифрование">
                 <MenuItem Header="Экспорт ключей" Command="{Binding ExportKeysCommand}"></MenuItem>
                 <MenuItem Header="Импорт ключей" Command="{Binding ImportKeysCommand}"></MenuItem>
@@ -118,7 +121,7 @@
                 <MenuItem Header="Обновить ключи шифрования" Command="{Binding UpdateDialogEncryptionKeysCommand}"></MenuItem>
             </MenuItem>
         </Menu>
-        <ListBox ItemContainerStyle="{StaticResource  DialogsStyle}"  Background="AliceBlue" x:Name="dialogListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Dialogs}" SelectedIndex="{Binding DialogSelectedIndex}" Grid.Row="1">
+        <ListBox ItemContainerStyle="{StaticResource  DialogsStyle}"  Background="AliceBlue" x:Name="dialogListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Dialogs}" SelectedIndex="{Binding DialogSelectedIndex}" Grid.Row="1" SelectionChanged="dialogListBox_SelectionChanged">
             
             <ListBox.ItemTemplate>
                 <DataTemplate DataType="m:Dialog">
