--- a/EncryptMessangerClient/MainWindow.xaml
+++ b/EncryptMessangerClient/MainWindow.xaml
@@ -57,12 +57,19 @@
                 <RowDefinition  Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
             
-            <ListBox  Grid.Row="0" x:Name="messagesListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Messages}">
+            <ListBox  Grid.Row="0" x:Name="messagesListBox" HorizontalAlignment="Stretch"  Margin="5,5,5,5" VerticalAlignment="Stretch"  Grid.Column="0" ItemsSource="{Binding Messages}" SelectedIndex="{Binding SelectedMessageIndex}">
+                <ListBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Удалить" Command="{Binding DeleteMessageCommand}"></MenuItem>
+                    </ContextMenu>                    
+                </ListBox.ContextMenu>
                 <ListBox.ItemTemplate>
-                    <DataTemplate DataType="m:DialogMessage">
+                
+                <DataTemplate DataType="m:DialogMessage">
                         <Border BorderBrush="Black" Margin="5" BorderThickness="1" CornerRadius="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Grid Background="AliceBlue" Margin="2">
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto"></RowDefinition>
                                     <RowDefinition Height="auto"></RowDefinition>
                                     <RowDefinition Height="auto"></RowDefinition>
                                     <RowDefinition Height="auto"></RowDefinition>
@@ -74,9 +81,12 @@
                                 </Grid.ColumnDefinitions>
                                 <Label Content="{Binding Author}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontWeight="Bold" Foreground="#1C1C1C" Grid.Row="0" Grid.Column="0"></Label>
                                 <Label Content="{Binding Text}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Grid.Row="1"></Label>
-                                <Label Content="{Binding SendDate}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontStyle="Italic" Foreground="DarkGray" Grid.Row="2" Grid.Column="0"></Label>
-                                <Label Content="{Binding AlteredErrorMessage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="3" Foreground="Red" Grid.Column="0"></Label>
-                                <Button Visibility="{Binding AttachButtonVisibility}" Content="Загрузить" Command="{Binding LoadFileCommand}" CommandParameter="{Binding LoadFileParams}" Grid.Column="1" Grid.Row="1"></Button>
+                                <Label Content="{Binding Error}" Visibility="{Binding ErrorVisibility}" HorizontalAlignment="Stretch" Foreground="Red" VerticalAlignment="Stretch"  Grid.Row="2"></Label>
+                                <Label Content="{Binding SendDate}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" FontStyle="Italic" Foreground="DarkGray" Grid.Row="3" Grid.Column="0"></Label>
+                                <Label Content="{Binding AlteredErrorMessage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="4" Foreground="Red" Grid.Column="0"></Label>
+                                <Button MaxHeight="40" Margin="5,0,0,0" Visibility="{Binding AttachButtonVisibility}" Command="{Binding LoadFileCommand}" CommandParameter="{Binding LoadFileParams}" Grid.Column="1" Grid.Row="1">
+                                    <Image Source="C:\Users\home\Documents\Visual Studio 2015\Projects\EncryptMessangerClient\EncryptMessangerClient\bin\Debug\LoadButton.png"></Image>
+                                </Button>
                             </Grid>
                         </Border>
                     </DataTemplate>
